--- a/Blockchain/You've got a message/task-info.yaml
+++ b/Blockchain/You've got a message/task-info.yaml
@@ -1,7 +1,7 @@
 type: edu
 custom_name: stage4
 files:
-- name: src/blockchain/Main.java
+- name: abuba
   visible: true
   text: |
     package blockchain;
