Build file added

--- a/Blockchain/You’ve got a message/task-info.yaml
+++ b/Blockchain/You’ve got a message/task-info.yaml
@@ -1,41 +1,8 @@
 type: edu
 custom_name: stage4
 files:
-- name: src/blockchain/Main.java
+- name: abuba
   visible: true
-  text: |
-    package blockchain;
-
-    import blockchain.management.BlockChain;
-    import blockchain.management.BlockChainManager;
-    import blockchain.management.Miner;
-
-    import java.util.concurrent.Executor;
-    import java.util.concurrent.ExecutorService;
-    import java.util.concurrent.Executors;
-    import java.util.concurrent.TimeUnit;
-
-    import static blockchain.ConsoleHandler.getInputNumber;
-
-    public class Main {
-        public static void main(String[] args) throws InterruptedException {
-    //        BlockChain blockChain = new BlockChain();
-    //        for (int i = 0; i < 5; i++) {
-    //            blockChain.generateBlock();
-    //        }
-
-            BlockChain blockChain = BlockChainManager.getBlockChain();
-            ExecutorService executor = Executors.newFixedThreadPool(10);
-
-            executor.submit(BlockChainManager.getMiner(blockChain));
-
-            executor.shutdown();
-            while (!executor.isTerminated()) {
-                Thread.sleep(100);
-            }
-            blockChain.printBlocks(5);
-        }
-    }
   learner_created: false
 - name: test/BlockchainTest.java
   visible: false
